--- a/frontend/alexandria-app/src/app/components/header/header.component.css
+++ b/frontend/alexandria-app/src/app/components/header/header.component.css
@@ -1,32 +1,30 @@
-.toolbars{
-  background: rgba(30, 64, 89, 1);
+* {
+	margin: 0;
+	padding: 0;
 }
-
-.example-spacer {
-    flex: 1 1 auto;
+.mat-toolbar {
+	background: rgba(30, 64, 89, 1);
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
-
-.toolbar{
-    display: flex;
-    align-items: center;
+.no-select {
+	cursor: pointer;
+	user-select: none;
 }
-
-.no-select{
-  cursor: pointer;
-  user-select: none;
+.logo {
+	font-family: 'Courgette', cursive;
+	font-size: 3em;
+	color: rgba(82, 135, 173, 1);
+	margin-left: 0.5em;
 }
-
-.logo{
-  font-family: 'Courgette', cursive;
-  font-size: 3em;
-  color:rgba(82, 135, 173, 1);
-  margin-left: 0.5em;
-}
-.profil{
-  width: 1.5em;
-  height: 1.5em;
-  font-size: 3em;
-  color: rgba(217, 217, 217, 1);
-  display: flex;
-  align-items: center;
+.profile {
+	width: 100%;
+	height: 100%;
+	font-size: 3em;
+	color: rgba(217, 217, 217, 1);
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
 }
